@@ -1,5 +1,8 @@
 v1.5.5
 Added charset parameter to case conversion functions - ADDED
+Avada compat CSS updated to adjust search button position - FIXED
+Filter `geodir_filter_title_variables_location_arr` added to filter the location variables for titles/meta - ADDED
+GD category page CPT slug does not change when switching language with WPML - FIXED
 
 v1.5.4
 Event after map marker opened extended to prevent FireFox reclosing marker with server side clustering addon - FIXED
